trying to fix size scrolling on mobile nav

--- a/styles/partials/_mediaQ.scss
+++ b/styles/partials/_mediaQ.scss
@@ -281,7 +281,7 @@
         display: none;
     }
 
-    .project .projectTitle .projectBackText {
+    .projects .projectTitle .projectBackText {
         display: none;
     }
 
