--- a/styles/style.css
+++ b/styles/style.css
@@ -1128,7 +1128,7 @@ footer .copyrightContainer .wrapper .creditsContainer .dimpleCredit a:hover {
   header .wrapper .sideBarIcons {
     display: none;
   }
-  .project .projectTitle .projectBackText {
+  .projects .projectTitle .projectBackText {
     display: none;
   }
   .projects .wrapper .projectContainer .project .mockUp {
